[tool.poetry]
name = "spring-container"
version = "1.0.0"
description = ""
authors = ["Joaquin Alvarez <alvarez.joaquinez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
pre-commit = "3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
